Change parseToExchangeRate to return a List